--- a/requirements.in
+++ b/requirements.in
@@ -37,6 +37,7 @@ mitol-django-openedx>=1.3.0
 mitol-django-payment-gateway>=1.9.1
 mitol-django-google-sheets>=2.6.0
 mitol-django-google-sheets-refunds>=0.8.0
+mitol-django-google-sheets-deferrals~=2023.5.25
 newrelic
 pyOpenSSL>=23.1.1
 psycopg2
