--- a/requirements.txt
+++ b/requirements.txt
@@ -8,8 +8,6 @@ amqp==5.0.9
     # via kombu
 anyascii==0.2.0
     # via wagtail
-appnope==0.1.3
-    # via ipython
 asgiref==3.3.4
     # via
     #   django
@@ -122,7 +120,7 @@ django==3.2.18
     #   mitol-django-openedx
     #   mitol-django-payment-gateway
     #   wagtail
-django-anymail[mailgun]==9.2
+django-anymail[mailgun]==8.4
     # via
     #   -r requirements.in
     #   mitol-django-authentication
@@ -289,7 +287,7 @@ mitol-django-google-sheets==2.6.0
     #   mitol-django-google-sheets-refunds
 mitol-django-google-sheets-refunds==0.8.0
     # via -r requirements.in
-mitol-django-hubspot-api==1.1.0
+mitol-django-hubspot-api==2023.5.10
     # via -r requirements.in
 mitol-django-mail==3.3.0
     # via
@@ -402,6 +400,7 @@ requests==2.28.2
     #   django-oauth-toolkit
     #   edx-api-client
     #   mitol-django-common
+    #   mitol-django-hubspot-api
     #   premailer
     #   requests-oauthlib
     #   social-auth-core
