--- a/requirements.txt
+++ b/requirements.txt
@@ -92,6 +92,7 @@ defusedxml==0.7.1
     # via
     #   python3-openid
     #   social-auth-core
+    #   willow
 deprecated==1.2.13
     # via jwcrypto
 dj-database-url==0.5.0
@@ -103,7 +104,9 @@ django==3.2.18
     #   django-cors-headers
     #   django-filter
     #   django-fsm-admin
+    #   django-modelcluster
     #   django-oauth-toolkit
+    #   django-permissionedforms
     #   django-redis
     #   django-reversion
     #   django-server-status
@@ -122,7 +125,7 @@ django==3.2.18
     #   mitol-django-openedx
     #   mitol-django-payment-gateway
     #   wagtail
-django-anymail[mailgun]==9.2
+django-anymail[mailgun]==8.4
     # via
     #   -r requirements.in
     #   mitol-django-authentication
@@ -153,10 +156,12 @@ django-hijack-admin==2.1.10
     # via -r requirements.in
 django-ipware==4.0.0
     # via -r requirements.in
-django-modelcluster==5.2
+django-modelcluster==6.0
     # via wagtail
 django-oauth-toolkit==1.7.0
     # via -r requirements.in
+django-permissionedforms==0.1
+    # via wagtail
 django-redis==5.0.0
     # via
     #   -r requirements.in
@@ -169,7 +174,7 @@ django-server-status==0.7.3
     # via -r requirements.in
 django-storages==1.11.1
     # via -r requirements.in
-django-taggit==1.5.1
+django-taggit==2.1.0
     # via wagtail
 django-templated-mail==1.1.1
     # via djoser
@@ -214,6 +219,8 @@ factory-boy==3.2.0
     #   mitol-django-hubspot-api
 faker==8.8.2
     # via factory-boy
+filetype==1.2.0
+    # via willow
 google-api-python-client==1.7.11
     # via
     #   mitol-django-google-sheets
@@ -306,8 +313,8 @@ oauthlib==3.2.2
     #   django-oauth-toolkit
     #   requests-oauthlib
     #   social-auth-core
-openpyxl==3.0.7
-    # via tablib
+openpyxl==3.1.2
+    # via wagtail
 packaging==20.9
     # via pytest
 parso==0.8.2
@@ -444,8 +451,6 @@ sqlparse==0.4.4
     # via django
 stevedore==3.5.0
     # via edx-opaque-keys
-tablib[xls,xlsx]==3.0.0
-    # via wagtail
 telepath==0.2
     # via wagtail
 tenacity==7.0.0
@@ -489,7 +494,7 @@ vine==5.0.0
     #   amqp
     #   celery
     #   kombu
-wagtail==2.15.2
+wagtail==5.0
     # via -r requirements.in
 wcwidth==0.2.5
     # via prompt-toolkit
@@ -497,16 +502,10 @@ webencodings==0.5.1
     # via
     #   bleach
     #   html5lib
-willow==1.4
+willow==1.5
     # via wagtail
 wrapt==1.12.1
     # via deprecated
-xlrd==2.0.1
-    # via tablib
-xlsxwriter==1.4.4
-    # via wagtail
-xlwt==1.3.0
-    # via tablib
 zope-interface==5.4.0
     # via datetime
 
