--- a/frontend/staff-dashboard/package.json
+++ b/frontend/staff-dashboard/package.json
@@ -19,7 +19,9 @@
     "craco-less": "2.0.0",
     "dayjs": "^1.11.7",
     "eslint-config-react": "1.1.7",
+    "js-file-download": "^0.4.12",
     "oidc-client-ts": "2.0.3",
+    "papaparse": "^5.4.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-markdown": "8.0.2",
