--- a/requirements.txt
+++ b/requirements.txt
@@ -220,6 +220,8 @@ faker==8.8.2
     # via factory-boy
 filetype==1.2.0
     # via willow
+freezegun==1.2.2
+    # via -r requirements.in
 google-api-python-client==1.7.11
     # via
     #   mitol-django-google-sheets
@@ -382,12 +384,13 @@ pytest==6.1.2
     # via
     #   mitol-django-common
     #   mitol-django-hubspot-api
-python-dateutil==2.5.3
+python-dateutil==2.8.2
     # via
     #   botocore
     #   celery-redbeat
     #   edx-api-client
     #   faker
+    #   freezegun
     #   hubspot-api-client
 python3-openid==3.2.0
     # via social-auth-core
