--- a/requirements.in
+++ b/requirements.in
@@ -27,6 +27,7 @@ django-reversion==4.0.1
 django-storages==1.11.1
 djoser==2.1.0
 edx-api-client==1.7.0
+freezegun~=1.2
 hubspot-api-client==6.1.0
 ipython
 mitol-django-common~=2.7.0
