Add hubspot_sync celery task queue

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -111,7 +111,7 @@ services:
     command: >
       /bin/bash -c '
       sleep 3;
-      celery -A main.celery:app worker -B -l ${MITX_ONLINE_LOG_LEVEL:-INFO}'
+      celery -A main.celery:app worker -Q hubspot_sync,celery -B -l ${MITX_ONLINE_LOG_LEVEL:-INFO}'
     links:
       - db
       - redis
