--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -45,28 +45,27 @@ jobs:
       - name: Apt install
         run: cat Aptfile | sudo xargs apt-get install
 
+      - name: Install poetry
+        uses: snok/install-poetry@v1
+        with:
+          version: 1.5.1
+          virtualenvs-create: true
+          virtualenvs-in-project: true
+
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
           python-version: "3.9.6"
 
-      - id: cache
-        uses: actions/cache@v3
-        with:
-          path: ~/.cache/pip
-          key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt', '**/test_requirements.txt') }}
-          restore-keys: |
-            ${{ runner.os }}-pip-
-
       - name: Install dependencies
-        run: pip install -r requirements.txt -r test_requirements.txt
+        run: poetry install --no-interaction
 
       # disabled for now because it's broken for some reason
       # - name: Lint
       #   run: pylint ./**/*.py
 
       - name: Code Formatting (Black)
-        run: black --check .
+        run: poetry run black --check .
 
       # Configurations required for elasticsearch.
       - name: Configure sysctl limits
