--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,3 +15,97 @@ exclude = '''
 [tool.isort]
 profile = "black"
 multi_line_output = 3
+
+
+[tool.poetry]
+name = "MITx Online"
+version = "0.69.1"
+description = "MITx Online"
+license = "BSD-3"
+readme = "README.md"
+packages = []
+authors  = ["MIT ODL"]
+
+
+[tool.poetry.dependencies]
+python = "3.9.6"
+beautifulsoup4 = "^4.8.2"
+celery = "^5.2.2"
+celery-redbeat = "^2.0.0"
+boto3 = "^1.16.63"
+bleach = "^5.0.1"
+dj-database-url = "^0.5.0"
+django-anymail = {extras = ["mailgun"], version = "^8.4"}
+django = "^3.2.18"
+django-cors-headers = "^3.11.0"
+django-countries = "^7.2.1"
+django-filter = "^2.4.0"
+django-fsm = "^2.8.0"
+django-fsm-admin = "^1.2.4"
+django-hijack = "^2.1.10"
+django-hijack-admin = "^2.1.10"
+django-ipware = "^4.0.0"
+django-redis = "^5.0.0"
+django-robots = "^4.0.0"
+django-server-status = "^0.7.3"
+django-treebeard = "^4.5.1"
+django-webpack-loader = "^1.4.1"
+django-oauth-toolkit = "^1.7.0"
+django-user-agents = "^0.4.0"
+djangorestframework = "^3.12.4"
+drf-extensions = "^0.7.1"
+django-reversion = "^4.0.1"
+django-storages = "^1.11.1"
+djoser = "^2.1.0"
+edx-api-client = "^1.7.0"
+hubspot-api-client = "^6.1.0"
+ipython = "^7.31.1"
+mitol-django-common = "2.7.0"
+mitol-django-hubspot-api = "2023.5.22"
+mitol-django-mail = "3.3.0"
+mitol-django-authentication = "1.6.0"
+mitol-django-openedx = "1.3.0"
+mitol-django-payment-gateway = "1.9.1"
+mitol-django-google-sheets = "2.6.0"
+mitol-django-google-sheets-refunds = "2023.6.9"
+mitol-django-google-sheets-deferrals = "2023.6.9"
+newrelic = "^6.4.1.158"
+pyOpenSSL = "^23.1.1"
+psycopg2 = "^2.9.5"
+pycountry = "^19.7.15"
+redis = "^4.4.4"
+requests = "^2.28.2"
+sentry-sdk = "^1.4.2"
+social-auth-app-django = "^4.0.0"
+user-util = "^0.1.5"
+ulid-py = "^1.1.0"
+uwsgi = "^2.0.19"
+wagtail = "^5.0"
+
+
+[tool.poetry.group.dev.dependencies]
+black = "^22.12.0"
+bpython = "^0.24"
+ddt = "^1.6.0"
+django-debug-toolbar = "^4.1.0"
+factory-boy = "^3.2.0"
+faker = "^8.8.2"
+flaky = "^3.7.0"
+freezegun = "^1.2"
+hypothesis = "^4.23.9"
+ipdb = "^0.13.13"
+isort = "^5.12.0"
+nplusone = "^1.0.0"
+pdbpp = "^0.10.3"
+pip-tools = "^7.1.0"
+pylint = "^2.6.0"
+pylint-django = "^2.4.4"
+pytest = "^6.1.2"
+pytest-cov = "^4.1.0"
+pytest-env = "^0.6.2"
+pytest-django = "^4.5.2"
+pytest-mock = "^3.11.1"
+pytest-lazy-fixture = "^0.6.3"
+responses = "^0.23.1"
+semantic-version = "^2.10.0"
+wagtail-factories = "^3.1"
