requirements: updated edx-api-client version

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -57,7 +57,7 @@ drf-extensions = "^0.7.1"
 django-reversion = "^4.0.1"
 django-storages = "^1.11.1"
 djoser = "^2.1.0"
-edx-api-client = "^1.7.0"
+edx-api-client = "1.8.0"
 hubspot-api-client = "^6.1.0"
 ipython = "^7.31.1"
 mitol-django-common = "2.7.0"
