feat: add ability to retire users on edX (#1785)
* feat: add ability to retire users on edX

* fix tests

* fix tests

* update app-json

* added checks for client id and secret

* tests: add tests

* requirements: updated edx-api-client version

* update dependency

* update dependency

--- a/app.json
+++ b/app.json
@@ -489,6 +489,14 @@
       "description": "The 'name' value for the Open edX OAuth Application",
       "required": true
     },
+    "OPENEDX_RETIREMENT_SERVICE_WORKER_CLIENT_ID": {
+      "description": "OAuth2 client id for retirement service worker",
+      "required": false
+    },
+    "OPENEDX_RETIREMENT_SERVICE_WORKER_CLIENT_SECRET": {
+      "description": "OAuth2 client secret for retirement service worker",
+      "required": false
+    },
     "OPENEDX_SERVICE_WORKER_API_TOKEN": {
       "description": "Active access token with staff level permissions to use with OpenEdX API client for service tasks",
       "required": false
