--- a/.env.example
+++ b/.env.example
@@ -12,3 +12,5 @@ SENTRY_DSN=
 MITX_ONLINE_BASE_URL=http://mitxonline.odl.local:8013
 MITX_ONLINE_ADMIN_CLIENT_ID=refine-local-client-id
 MITX_ONLINE_ADMIN_BASE_URL=http://mitxonline.odl.local:8016
+POSTHOG_API_TOKEN=
+POSTHOG_API_HOST=https://app.posthog.com/
