bad copy paste on the ini file

--- a/pytest.ini
+++ b/pytest.ini
@@ -23,5 +23,5 @@ env =
   RECAPTCHA_SITE_KEY=
   RECAPTCHA_SECRET_KEY=
   IN_TEST_SUITE=True
-  POSTHOG_API_TOKEN: fake_posthog_api_token
-  POSTHOG_API_HOST: http://fakeurl.com
+  POSTHOG_API_TOKEN=fake_posthog_api_token
+  POSTHOG_API_HOST=http://fakeurl.com
