--- a/frontend/public/package.json
+++ b/frontend/public/package.json
@@ -112,6 +112,7 @@
     "serialize-javascript": "3.1.0",
     "shelljs": "0.8.5",
     "sinon": "4.5.0",
+    "slick-carousel": "^1.8.1",
     "style-loader": "3.3.1",
     "styled-components": "4.4.1",
     "url-join": "4.0.1",
