--- a/pyproject.toml
+++ b/pyproject.toml
@@ -83,6 +83,8 @@ uwsgi = "^2.0.19"
 wagtail = "^5.0"
 hypothesis = "4.23.9"
 posthog = "^3.0.1"
+uwsgitop = "^0.11"
+locust = "^2.17.0"
 
 
 [tool.poetry.group.dev.dependencies]
