Added tests, fixture and utility functions

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -84,6 +84,7 @@ wagtail = "^5.0"
 hypothesis = "4.23.9"
 posthog = "^3.0.1"
 uwsgitop = "^0.11"
+deepdiff = "^6.6.1"
 
 
 [tool.poetry.group.dev.dependencies]
