Redid the upgrade on a new branch because I had weird dependency issues.

--- a/frontend/public/package.json
+++ b/frontend/public/package.json
@@ -91,7 +91,7 @@
     "react-markdown": "5.0.3",
     "react-page-click": "4.0.4",
     "react-picky": "4.7.2",
-    "react-redux": "5.1.2",
+    "react-redux": "^7.1.0",
     "react-router": "4.3.1",
     "react-router-dom": "4.3.1",
     "react-select": "3.2.0",
@@ -99,11 +99,13 @@
     "react-test-renderer": "16.14.0",
     "react-zendesk": "0.1.13",
     "reactstrap": "9.1.6",
-    "redux": "3.7.2",
+    "redux": "4.0.0",
     "redux-actions": "2.6.5",
     "redux-asserts": "0.0.10",
     "redux-logger": "3.0.6",
-    "redux-query": "2.3.1",
+    "redux-query": "3.3.1",
+    "redux-query-interface-superagent": "3.3.1",
+    "redux-query-react": "3.3.1",
     "reselect": "4.1.5",
     "sanctuary": "0.13.2",
     "sass": "1.49.11",
