--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "version": "0.0.0",
     "packageManager": "yarn@3.2.0",
     "dependencies": {
-        "react-content-loader": "^6.2.1"
+        "react-content-loader": "^6.2.1",
+        "redux-query": "3.3.1",
+        "redux-query-interface-superagent": "3.3.1",
+        "redux-query-react": "3.3.1"
     }
 }
