--- a/pants.toml
+++ b/pants.toml
@@ -5,7 +5,7 @@ backend_packages = [
   # local plugins
   "mitol.docs"
 ]
-pants_version = "2.8.1rc1"
+pants_version = "2.17.1"
 pythonpath = ["%(buildroot)s/pants-plugins"]
 
 [anonymous-telemetry]
