--- a/frontend/public/package.json
+++ b/frontend/public/package.json
@@ -107,6 +107,7 @@
     "redux-query": "3.3.1",
     "redux-query-interface-superagent": "3.3.1",
     "redux-query-react": "3.3.1",
+    "redux-thunk": "^3.1.0",
     "reselect": "4.1.5",
     "sanctuary": "0.13.2",
     "sass": "1.49.11",
