--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
         "redux-query": "3.3.1",
         "redux-query-interface-superagent": "3.3.1",
         "redux-query-react": "3.3.1"
+    },
+    "resolutions": {
+        "@types/react": "^17"
     }
 }
