--- a/frontend/public/package.json
+++ b/frontend/public/package.json
@@ -63,7 +63,7 @@
     "lodash": "4.17.21",
     "mini-css-extract-plugin": "2.6.0",
     "mocha": "9.2.2",
-    "moment": "<2.29.0",
+    "moment": "2.29.4",
     "moment-locales-webpack-plugin": "^1.2.0",
     "moment-timezone": "^0.5.43",
     "named-urls": "1.4.0",
