--- a/pyproject.toml
+++ b/pyproject.toml
@@ -85,6 +85,7 @@ hypothesis = "4.23.9"
 posthog = "^3.0.1"
 uwsgitop = "^0.11"
 deepdiff = "^6.6.1"
+wagtail-metadata = "^5.0.0"
 
 
 [tool.poetry.group.dev.dependencies]
