--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,8 +2,8 @@ version: '3.9'
 
 x-environment:
   &py-environment
-  DEBUG: '${DEBUG:-False}'
-  NODE_ENV: 'production'
+  DEBUG: '${DEBUG:-True}'
+  NODE_ENV: 'development'
   DEV_ENV: 'True'  # necessary to have nginx connect to web container
   SECRET_KEY: local_unsafe_key
   DATABASE_URL: postgres://postgres@db:5432/postgres
@@ -22,7 +22,7 @@ x-extra-hosts:
   &default-extra-hosts
   - "edx.odl.local:${OPENEDX_IP:-172.22.0.1}"
   - "host.docker.internal:host-gateway"
-  - "local.overhang.io:host-gateway"
+  - "local.edly.io:host-gateway"
 
 services:
   db:
