--- a/app.json
+++ b/app.json
@@ -539,6 +539,10 @@
       "description": "API token to communicate with PostHog",
       "required": false
     },
+    "POSTHOG_REQUEST_TIMEOUT_MS": {
+      "description": "Timeout(MS) for PostHog feature flag requests",
+      "required": false
+    },
     "RECAPTCHA_SECRET_KEY": {
       "description": "The ReCaptcha secret key",
       "required": false
