--- a/frontend/public/package.json
+++ b/frontend/public/package.json
@@ -55,6 +55,7 @@
     "flow": "0.2.3",
     "flow-bin": "0.95.1",
     "flow-typed": "3.7.0",
+    "focus-formik-error": "^1.1.0",
     "formik": "^2.4.5",
     "history": "4.10.1",
     "isomorphic-fetch": "2.2.1",
