--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,22 +1,3 @@
-[tool.black]
-py38 = true
-include = '\.pyi?$'
-exclude = '''
-/(
-    \.git
-  | \.mypy_cache
-  | \.tox
-  | \.venv
-  | build
-  | dist
-  | node_modules
-)/
-'''
-[tool.isort]
-profile = "black"
-multi_line_output = 3
-
-
 [tool.poetry]
 name = "MITx Online"
 version = "0.69.1"
@@ -89,7 +70,6 @@ wagtail-metadata = "^5.0.0"
 
 
 [tool.poetry.group.dev.dependencies]
-black = "^22.12.0"
 bpython = "^0.24"
 ddt = "^1.6.0"
 django-debug-toolbar = "^4.1.0"
@@ -98,12 +78,9 @@ faker = "^8.8.2"
 flaky = "^3.7.0"
 freezegun = "^1.2"
 ipdb = "^0.13.13"
-isort = "^5.12.0"
 nplusone = "^1.0.0"
 pdbpp = "^0.10.3"
 pip-tools = "^7.1.0"
-pylint = "^2.6.0"
-pylint-django = "^2.4.4"
 pytest = "^6.1.2"
 pytest-cov = "^4.1.0"
 pytest-env = "^0.6.2"
@@ -111,5 +88,134 @@ pytest-django = "^4.5.2"
 pytest-mock = "^3.11.1"
 pytest-lazy-fixture = "^0.6.3"
 responses = "^0.23.1"
+ruff = "^0.4"
 semantic-version = "^2.10.0"
 wagtail-factories = "^3.1"
+pre-commit = "^3.7.0"
+
+[tool.ruff]
+target-version = "py39"
+line-length = 88
+
+[tool.ruff.lint]
+select = [
+    "A",  # flake8-builtins
+    # "AIR",  # Airflow
+    # "ANN",  # flake8-annotations
+    "ARG",  # flake8-unused-arguments
+    # "ASYNC",  # flake8-async
+    "B",  # flake8-bugbear
+    "BLE",  # flake8-blind-except
+    "C4",  # flake8-comprehensions
+    "C90",  # mccabe
+    # "COM",  # flake8-commas
+    # "CPY",  # flake8-copyright
+    "D",  # pydocstyle
+    "DJ",  # flake8-django
+    "DTZ",  # flake8-datetimez
+    "E",  # Pycodestyle Error
+    "EM",  # flake8-errmsg
+    "ERA",  # eradicate
+    "EXE",  # flake8-executable
+    "F",  # Pyflakes
+    "FA",  # flake8-future-annotations
+    "FBT",  # flake8-boolean-trap
+    "FIX",  # flake8-fixme
+    "FLY",  # flynt
+    # "FURB",  # refurb
+    "G",  # flake8-logging-format
+    "I",  # isort
+    "ICN",  # flake8-import-conventions
+    "INP",  # flake8-no-pep420
+    "INT",  # flake8-gettext
+    "ISC",  # flake8-implicit-str-concat
+    "N",  # pep8-naming
+    # "NPY",  # NumPy-specific rules
+    # "PD",  # pandas-vet
+    "PERF",  # Perflint
+    "PGH",  # pygrep-hooks
+    "PIE",  # flake8-pie
+    "PL",  # Pylint
+    "PT",  # flake8-pytest-style
+    "PTH",  # flake8-use-pathlib
+    "PYI",  # flake8-pyi
+    "Q",  # flake8-quotes
+    "RET",  # flake8-return
+    "RSE",  # flake8-raise
+    "RUF",  # Ruff-specific rules
+    "S",  # flake8-bandit
+    "SIM",  # flake8-simplify
+    "SLF",  # flake8-self
+    "SLOT",  # flake8-slots
+    "T10",  # flake8-debugger
+    "T20",  # flake8-print
+    "TCH",  # flake8-type-checking
+    "TD",  # flake8-todos
+    "TID",  # flake8-tidy-imports
+    "TRY",  # tryceratops
+    "UP",  # pyupgrade
+    "W",  # Pycodestyle Warning
+    "YTT",  # flake8-2020
+]
+ignore = [
+    "A003",
+    "B008",
+    "B905",
+    "COM812",
+    "COM819",
+    "D104",
+    "D105",
+    "D106",
+    "D107",
+    "D200",
+    "D202",
+    "D205",
+    "D206",
+    "D300",
+    "D301",
+    "D400",
+    "D401",
+    "E111",
+    "E114",
+    "E117",
+    "E501",
+    "INP001",
+    "ISC001",
+    "ISC001",
+    "ISC002",
+    "N803",
+    "N806",
+    "N999",
+    "PIE804",
+    "PLR0912",
+    "PT023",
+    "Q000",
+    "Q001",
+    "Q002",
+    "Q003",
+    "RET505",
+    "RET506",
+    "RET507",
+    "RET508",
+    "RUF012",
+    "TRY003",
+    "UP007",
+    "W191"
+]
+fixable = ["ALL"]
+
+typing-modules = ["colour.hints"]
+
+[tool.ruff.lint.pydocstyle]
+convention = "pep257"
+
+[tool.ruff.lint.flake8-quotes]
+inline-quotes = "double"
+
+[tool.ruff.lint.flake8-pytest-style]
+fixture-parentheses = false
+
+[tool.ruff.lint.per-file-ignores]
+"*_test.py" = ["ARG001", "E501", "S101", "PLR2004"]
+"test_*.py" = ["ARG001", "E501", "S101", "PLR2004"]
+"**/migrations/**" = ["ARG001", "D101", "D100"]
