--- a/pyproject.toml
+++ b/pyproject.toml
@@ -86,6 +86,7 @@ posthog = "^3.0.1"
 uwsgitop = "^0.11"
 deepdiff = "^6.6.1"
 wagtail-metadata = "^5.0.0"
+mitol-django-olposthog = {path = "mitol-django-olposthog-2024.4.16.tar.gz"}
 
 
 [tool.poetry.group.dev.dependencies]
